deployment/dev/redis/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  selector:
    app: redis
  type: LoadBalancer
  ports:
    - name: port-6379
      port: 6379
      targetPort: 6379
      protocol: TCP
